DuPont DevSB/src/objects/ConstructionPts__CP_Dynamic_UserData__c.object
<CustomObject>
    <description>This object holds the last set data for a User and the object detail page, ei.  there is only one record for User-Account relationship which will be updated each time the user looks at another Account.</description>
    <fields>
        <fullName>ConstructionPts__Data_Value__c</fullName>
        <description>This field holds the actual dynamic data for this specific User and current page, ex. holding in-line visualforce page height.</description>
        <label>Data Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Record_Id__c</fullName>
        <description>This 18 character field holds the Id of the record displayed on the page.</description>
        <inlineHelpText>This 18 character field holds the Id of the record displayed on the page.</inlineHelpText>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This 18 character field holds the Id of the current logged in user.</description>
        <inlineHelpText>This 18 character field holds the Id of the current logged in user.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dynamic_User_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__VF_Inline_Page_Identifier__c</fullName>
        <description>This field will hold a distinct identifier for an in-line visualforce page (typically reflected in the title of the Iframe containing the inline visualforce page).</description>
        <inlineHelpText>Please enter a distinct text identifying this iFrame on the page.</inlineHelpText>
        <label>VF Inline Page Identifier</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CP Dynamic User Data</label>
    <nameField>
        <displayFormat>UD-{000000}</displayFormat>
        <label>CP Dynamic User Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Dynamic User Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>